# OtherStudy

./: .gitignore  README.md
CMake/: CMake_help.md
CMake/base/: CMakeLists.txt  build_help.md
CMake/base1_set/: CMakeLists.txt
CMake/base2_aux_source_directory/: CMakeLists.txt
CMake/c_add_compile_definitions0/: CMakeLists.txt  main.cpp
CMake/c_add_library0/: CMakeLists.txt
CMake/c_aux_source_directory0/: CMakeLists.txt
CMake/c_file0/: CMakeLists.txt  main.cpp
CMake/c_file0/src/: add.cpp  sub.cpp
CMake/c_find_package0/: CMakeLists.txt
CMake/c_list0/: CMakeLists.txt
CMake/c_list0/src/: head.h
CMake/c_message0/: CMakeLists.txt
CMake/c_set0/: CMakeLists.txt
CMake/c_set1_CMAKE_CXX_FLAGS/: CMakeLists.txt  main.cpp
CMake/c_set_target_properties0/: CMakeLists.txt
CMake/c_target_include_directories0/: CMakeLists.txt  main.cpp
CMake/c_target_include_directories0/src/: add.cpp  sub.cpp
CMake/c_target_link_libraries0/: CMakeLists.txt
CMake/c_target_link_libraries0/dll_a/: c_target_link_libraries0
CMake/nest_demo/: CMakeLists.txt
CMake/nest_demo/calc/: CMakeLists.txt
CMake/nest_demo/exe/: test_sort
CMake/nest_demo/sort/: CMakeLists.txt  insert.cpp  select.cpp
CMake/nest_demo/test_calc/: CMakeLists.txt  calc_t.cpp
CMake/nest_demo0/: CMakeLists.txt
CMake/nest_demo0/exe/: test_calc  test_sort
CMake/nest_demo0/include/: sort.h
CMake/nest_demo0/sort/: CMakeLists.txt
CMake/nest_demo0/test_calc/: CMakeLists.txt
CMake/nest_demo0/test_sort/: CMakeLists.txt  sort_t.cpp
CMake/nest_demo1/: CMakeLists.txt
CMake/nest_demo1/calc/: CMakeLists.txt  div.cpp
CMake/nest_demo1/exe/: test_sort
CMake/nest_demo1/include/: calc.h
CMake/nest_demo1/sort/: CMakeLists.txt  insert.cpp  select.cpp
Docker/docker_compose_base/: docker-compose.yml
Docker/docker_compose_base0/: docker-compose.yml
Docker/docker_compose_base1/: docker-compose.yml
cpp_pybind11/: pybind11_cmake_help.md  pybind11_help.md
cpp_pybind11/base/: CMakeLists.txt  base.cpp
cpp_pybind11/base/pytest/: base_py.py  benchmark_test.py
cpp_pybind11/class/: CMakeLists.txt  class_has_a_combination.cpp  class_operator_overload.cpp  class_overload.cpp
cpp_pybind11/func/: func_args_kwargs.cpp  func_template_overload.cpp
cpp_pybind11/other/: CMakeLists.txt  cpp_access_python_attr.cpp  py_type.cpp  py_type_cast.cpp  py_type_ldst.cpp
cpp_pybind11/other/pytest/py_type/: test.py
cpp_pybind11/other/pytest/py_type_cast/: test.py
cpp_pybind11/type_conversions/: CMakeLists.txt  automatic_conversion_basic_data_type.cpp  automatic_conversion_stl_type.cpp  bind_stl.cpp  making_opaque_type.cpp
docker_demo/docker_compose_base/: docker-compose.yml
pybind11_/: pybind11_help.md
pybind11_/base/: CMakeLists.txt  base.cpp  benchmark.cpp
pybind11_/base/pytest/: test.py
pybind11_/class/: CMakeLists.txt  class0_base.cpp  class_custom_init.cpp  class_get_set.cpp  class_inhert_polymorphic.cpp  class_overload.cpp  class_polymorphic.cpp  class_template.cpp
pybind11_/class/pytest/: class0_base_py.py  class0_base_test.py  class_get_set_test.py
pybind11_/class/pytest/class0_base/: class0_base_py.py  test.py
pybind11_/class/pytest/class_custom_init/: class_custom_init_py.py  test.py
pybind11_/class/pytest/class_get_set/: class_get_set_py.py
pybind11_/class/pytest/class_has_a_combination/: test.py
pybind11_/class/pytest/class_inherit_polymorphic/: test.py
pybind11_/class/pytest/class_operator_overload/: test.py
pybind11_/class/pytest/class_overload/: test.py
pybind11_/class/pytest/class_polymorphic/: test.py
pybind11_/class/pytest/class_template/: test.py
pybind11_/class0/: CMakeLists.txt  main.cpp
pybind11_/class0/pytest/: class0_py.py  test.py
pybind11_/class1_inherit/: CMakeLists.txt  main.cpp
pybind11_/class1_inherit/pytest/: class1_inherit_py.py  test.py
pybind11_/func/: CMakeLists.txt  args_kwargs.cpp  func0_base.cpp  func_template.cpp
pybind11_/func/pytest/: func0_base_py.py
pybind11_/func/pytest/args_kwargs/: test.py
pybind11_/func/pytest/func0_base/: test.py
pybind11_/func/pytest/func_args_kwargs/: test.py
pybind11_/func/pytest/func_template/: test.py
pybind11_/func/pytest/func_template_overload/: test.py
pybind11_/func0/: CMakeLists.txt  main.cpp
pybind11_/func0/pytest/: func0_py.py  test.py
pybind11_/other/: CMakeLists.txt  cpp_access_python_c.cpp  cpp_access_python_f.cpp  py_type_ldst.cpp
pybind11_/type_conversions/: CMakeLists.txt  automatic_conversion_basic_data_type.cpp  automatic_conversion_stl_type.cpp  base_data_type.cpp  bind_stl.cpp  cast_py_type.cpp  making_opaque_type.cpp  py_type.cpp  stl_type.cpp
pybind11_/type_conversions/pytest/base_data_type/: test.py
pybind11_/type_conversions/pytest/bind_stl/: test.py
pybind11_/type_conversions/pytest/making_opaque_type/: test.py
pybind11_/type_conversions/pytest/py_type/: test.py
pybind11_/type_conversions/pytest/stl_type/: test.py
pybind11_/xx/: CMakeLists.txt  main.cpp
rust_pyo3/: Cargo.toml  pyo3_matruin_help.md
rust_pyo3/base/: Cargo.toml  base-0.3.8-cp310-cp310-manylinux_2_34_x86_64.whl  base-0.3.8-cp310-none-win_amd64.whl  pyproject.toml
rust_pyo3/base/src/: child.rs  lib.rs  other.rs  py_test.py
rust_pyo3/class_/: Cargo.toml  pyproject.toml
rust_pyo3/class_/src/: lib.rs
rust_pyo3/class_py/: Cargo.toml  class_py-0.1.0-cp310-cp310-manylinux_2_34_x86_64.whl  pyproject.toml
rust_pyo3/class_py/src/: base.rs  base_test.py  class_as_function_arguments.rs  lib.rs  magic_methods.rs  (+6 more)
rust_pyo3/func/: Cargo.toml  func-0.1.0-cp310-cp310-manylinux_2_34_x86_64.whl  func-0.1.0-cp310-none-win_amd64.whl  pyproject.toml
rust_pyo3/other/: Cargo.toml  other-0.1.0-cp310-cp310-manylinux_2_34_x86_64.whl  pyproject.toml
rust_pyo3/type_conversions/: Cargo.toml  pyproject.toml  type_conversions-0.1.0-cp310-cp310-manylinux_2_34_x86_64.whl
rust_serde_serde_json/: Cargo.toml
rust_serde_serde_json/src/: main.rs  serde_base_.rs  serde_container_attributes_.rs  serde_custom_serialization_.rs  serde_field_variant_attributes_.rs  serde_json_base_.rs  serde_variant_attributes_.rs
(+35 files in other folders)
