cmake_minimum_required(VERSION 3.21)

project(type_conversions)

find_package(pybind11 CONFIG)

pybind11_add_module(automatic_conversion_basic_data_type automatic_conversion_basic_data_type.cpp)
set_target_properties(automatic_conversion_basic_data_type PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/pytest/automatic_conversion_basic_data_type)

pybind11_add_module(automatic_conversion_stl_type automatic_conversion_stl_type.cpp)
set_target_properties(automatic_conversion_stl_type PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/pytest/automatic_conversion_stl_type)
